<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

    <TextView
            android:text="@string/activity_main_empty_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_empty_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_main_colors_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/activity_main_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            fab:fab_addButtonColorNormal="@color/white"
            fab:fab_addButtonColorPressed="@color/white_pressed"
            fab:fab_addButtonPlusIconColor="@color/half_black"
            fab:fab_labelsPosition="left"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_colors_list">

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/activity_main_setup_customers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/white"
                fab:fab_title="@string/activity_main_setup_customers"
                fab:fab_icon="@drawable/ic_customers"
                fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/activity_main_choose_color_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_size="mini"
                fab:fab_icon="@drawable/ic_paint"
                fab:fab_title="@string/activity_main_add_color"
                fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.constraint.ConstraintLayout>